<?xml version="1.0"?>
<package format="3">
    <name>floam</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="dario.lodirizzini@unipr.it">dario</maintainer>
    <license>TODO: License declaration</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>ceres</build_depend>
    
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>ceres</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    
    
    
    
    <export>
    </export>
</package>

